webb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webbserver-deployment
  labels:
    app: min-webbapp
spec:
  replicas: 6
  selector:
    matchLabels:
      app: min-webbapp
  template:
    metadata:
      labels:
        app: min-webbapp
    spec:
      containers:
      - name: nginx-container
        image: nginx:alpine
        command: ["/bin/sh", "-c"]
        args:
          - |
            [...]
        ports:
        - containerPort: 80
