webb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webbserver-service
spec:
  selector:
    app: min-webbapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
