ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azimuth-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: azimuth.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webbserver-service
            port:
              number: 80
